testdata/asm/invalid/div_05.zkasm
;;error:3:6-7:missing target register for witness
fn div(x u16, y u16) -> (q u16, r u16) {
  q, r = x / y
  return
}
